--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 
         <div class="section cv" id="cv">
             <h2>Curriculum Vitae</h2>
-            <a href="#" download="files\Sujit Layek_CV.pdf">
+            <a href="files\Sujit Layek_CV.pdf" download="Sujit Layek_CV.pdf">
                 <button class="button"><i class="fa fa-download"></i> Download CV</button>
             </a>
         </div>
