--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 
         <div class="section cv" id="cv">
             <h2>Curriculum Vitae</h2>
-            <a href="files\Sujit Layek_Resume.pdf" download="Sujit Layek.pdf">
+            <a href="files\Sujit Layek (2).pdf" download="Sujit Layek.pdf">
                 <button class="button"><i class="fa fa-download"></i> Download CV</button>
             </a>
         </div>
@@ -298,10 +298,6 @@
             <div class="contact-child">
 
                 <h2>Contact Information</h2>
-                <p>
-                    <i class="fa fa-phone" style="font-size:30px;color:rgb(7, 155, 241)"></i>
-                    <a href="tel:+916296044507">+91 6296044507</a>
-                </p>
                 <p>
                     <i class="fa fa-envelope" style="font-size:30px;color:rgb(7, 155, 241)"></i>
                     <a href="mailto:sujitlayek2003@gmail.com">sujitlayek2003@gmail.com</a>
